# Monito-RS

./: .gitignore  Cargo.toml  README  README.md
.github/workflows/: cli-build.yml  rust.yml  tauri-build.yml
monito-cli/: Cargo.toml
monito-cli/src/: main.rs
monito-gui/: Cargo.toml  index.html  package.json  tailwind.config.cjs
monito-gui/src/: App.jsx  ConfigPage.jsx  FrontPage.jsx  SecondPage.jsx  TabsPage.jsx  TitleBar.jsx
monito-gui/src-tauri/: Cargo.toml  tauri.conf.json
monito-gui/src-tauri/capabilities/: default.json
monito-gui/src-tauri/src/: main.rs
monito-gui/src/component/: BrightnessItem.jsx  Collapse.jsx  ColorItem.jsx  LogoIcon.jsx  RangeBar.jsx
monito-gui/src/style/: global.css
monito-gui/src/utils/: TitleBorder.jsx  cmd.js  router.jsx
monito-lib/: Cargo.toml
monito-lib/src/: lib.rs  utils.rs  win.rs
