[package]
name = "monito-gui"
version = "0.2.0"
description = "A util for monitor(s) control"
authors = ["Mizuiro Lau"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
monito-lib = { path = "../../monito-lib" }
log = { workspace = true }
env_logger = { workspace = true }

